Adjust padding to prevent jumping text

--- a/options.css
+++ b/options.css
@@ -22,7 +22,7 @@
 	.list-group > .list-group-item > .list-content {
 		display: block;
 		padding: 10px 15px;
-		padding-right: 130px;
+		padding-right: 150px;
 		position: relative;
 	}
 	.list-group > .list-group-item > .list-content h4 {
